Different updates and documentation fixes
